Function Add Item OK, along with the link. Some layout issues were improved, as positioning of the boxes, and relative positions.

--- a/static/styles.css
+++ b/static/styles.css
@@ -15,7 +15,7 @@ h2 {
   color: #003366;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  margin: 20px 10px 10px 10px;
+  margin: 5px 10px 10px 10px;
 }
 
 h3 {
@@ -30,8 +30,33 @@ p {
   margin: 0 10px 15px 10px;
 }
 
+label {
+  color: black;
+  font-family: 'Alegreya Sans', sans-serif;
+  display: block;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+input, textarea, select {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  display: block;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+
 a:link {
   text-decoration: none;
+}
+
+.submit {
+  color: black;
+  font-family: 'Alegreya Sans', sans-serif;
+  display: block;
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .box {
@@ -84,7 +109,14 @@ a:link {
 }
 
 .items {
+  position: relative;
+  left: 35%;
+  margin-top: -120px;
+  max-width: 70%;
+}
+
+.addlink {
   position: absolute;
   left: 35%;
-  top: 0;
+  top: 10px;
 }
